# Case_Creator_App

./: .gitattributes  .gitignore  AGENTS.md  Case_Creator_App.spec  PROJECT_CONTEXT.md  README.md  SETUP.md  STARTER_PROMPT_FOR_CODEX.md  build_exe.bat  environment.yml  pyproject.toml  run_app_conda.bat
docs/: APP_FUNCTIONAL_SPEC.md  PROJECT_JSON_GUIDE.md
examples/: Input_Data_PSCAD_Python_0.11 3.xlsx  Input_Data_PSCAD_Python_v11 1st page.xlsx  Input_Data_PSCAD_Python_v11.xlsx  README.md  for test project json.casebuilder.json  for test project json.xlsx
src/case_builder_app/: __main__.py  models.py
src/case_builder_app/assets/: __init__.py  export_template.xlsx
src/case_builder_app/services/: equipment.py  exclusion_parser.py  export_ordering.py  export_service.py  generator.py  input_data.py  persistence.py  sheet_builders.py  style_template.py  text_tokens.py  validation.py
src/case_builder_app/ui/: cb_state_board.py  changes_editor.py  common.py  export_dialogs.py  fault_level_section.py  inherited_table_section.py  input_data_dialog.py  main_window.py  project_document.py  project_selection.py  project_settings_dialog.py  project_structure.py  rules_dialogs.py  table_helpers.py  token_list.py
tests/: test_base_case.py  test_changes_editor.py  test_export_dialogs.py  test_generation.py  test_main_window.py  test_rules_dialogs.py  test_services.py
