[project]
name = "case-creator-app"
version = "0.1.0"
description = "Desktop app for building PSCAD study-case workbooks."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "PySide6>=6.8",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
]
packaging = [
    "pyinstaller>=6.11",
]

[project.scripts]
case-creator-app = "case_builder_app.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/case_builder_app"]

[tool.hatch.build.targets.wheel.force-include]
"src/case_builder_app/assets" = "case_builder_app/assets"

[tool.pytest.ini_options]
testpaths = ["tests"]
